Added Post a Question button

--- a/questions/questions.html
+++ b/questions/questions.html
@@ -23,6 +23,7 @@
                 </a>
             </div>
         </div>
+        <button class="postButton">Post a Question</button>
         <div class="questions">
             <h3 class="searchText">Search questions, topics, and accounts</h3>
             <form>
