Mostly added work to Profile Page in this iteration

--- a/users/profile.html
+++ b/users/profile.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="../styling/css/style.css">
     </head>
-    <body>
+    <body class="profileBody">
         <div class="header">
             <a href="../questions/questions.html">
                 <img src="../styling/Images/AardvarkLogo.png" alt="Aardvark Answers Logo" class="logo">
@@ -23,7 +23,17 @@
                 </a>
             </div>
         </div>
-        <div class="bar"></div>
-        
+        <div class="wrapper">
+            <div class="bar"></div>
+        </div>
+        <div class="leftSide">
+            <h1>Account Overview</h1>
+            <img src="../styling/Images/profilePic.jpg" class="profilePic" alt="Profile Picture">
+            <button class="uploadPic">Upload Photo</button>
+            <h2>Email:</h2>
+            <input value="Enter your email" class="login">
+            <h2>Password:</h2>
+            <input value="Enter your current password" class="login">
+        </div>
     </body>
 </html>
