--- a/questions/questions.html
+++ b/questions/questions.html
@@ -30,6 +30,11 @@
                 <input class="search"></input>
             </form>
             <button class="searchButton">Search</button>
+            <div class="posts">
+<!-- We will need to add a conditional here to display "There are no posts" when empty. -->
+                <h3 class="postedText">Recently Posted</h3>
+                
+            </div>
         </div>
     </body>
 </html>
