Added Login/Register pages as well as Logout button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     </head>
     <body>
         <img src="./styling/Images/LogoText.png" alt="Aardvark Answers Logo" class="Indexlogo">
-        <button class="buttons">Login</button>
-        <button class="buttons">Register</button>
+        <form method="GET" action="./users/login.html">
+            <button class="buttons">Login</button>
+        </form>
+        <form method="GET" action="./users/register.html">
+            <button class="buttons">Register</button>
+        </form>
     </body>
 </html>
