--- a/users/profile.html
+++ b/users/profile.html
@@ -20,6 +20,9 @@
                 </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="profile.html">
                     <h2 class="navCurrent">My Account</h2>
+                </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="../index.html">
+                    <h2 class="nav">Logout</h2>
                 </a>
             </div>
         </div>
